🐛👌fix bug: btn text not on 1 line just on firefox

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -43,7 +43,7 @@ $table: 768px;
     &__request{
         color: var(--color-black);
         background-color: var(--color-slime-green);
-        padding: .9rem 2.7rem;
+        padding: .9rem 2.6rem;
         border: none;
         border-radius: 2.8rem;
         font-weight: bold;
